--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         name: Check for new tags in LemmyNet/Lemmy
         run: |
           #!/bin/bash
-          latest_tag=$(curl -s https://api.github.com/repos/lemmynet/lemmy/tags | jq -r '.[0].name')
+          latest_tag=$(curl -s https://api.github.com/repos/lemmynet/lemmy/releases/latest -s | jq .name -r)
           echo "latest_tag=$latest_tag" >> $GITHUB_ENV
       - 
         name: Check if the new tag exists in DockerHub
