--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,7 @@ jobs:
         id: prepare
         run: |
 
-          PLATFORMS="linux/amd64"
-          #PLATFORMS="linux/amd64,linux/arm64"
+          PLATFORMS="linux/amd64,linux/arm64"
           
           TAGS=()
           TAGS=("${{ secrets.DOCKERHUB_REPO }}:latest")
