--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,7 +65,6 @@ jobs:
           git clone --recurse-submodules -j8 https://github.com/lemmynet/lemmy.git --single-branch --branch ${{ steps.prepare.outputs.version }}
           cp Dockerfile lemmy/
           cp .dockerignore lemmy/
-          cp crates/api_common/src/request.rs lemmy/crates/api_common/src/request.rs
       -
         name: Login into Docker Hub
         if: env.exists == 'false'
@@ -93,6 +92,32 @@ jobs:
           echo "Tags: ${{ steps.prepare.outputs.tags }}"
 
           cd lemmy
+          docker buildx build --platform ${{ steps.prepare.outputs.docker_platforms }} \
+            --output "type=image,push=true" \
+            --progress=plain \
+            --build-arg "BUILD_ARG=${GITHUB_RUN_ID}" \
+            --build-arg "VERSION_ARG=${{ steps.prepare.outputs.version }}" \
+            --build-arg "DATE_ARG=${{ steps.prepare.outputs.build_date }}" \
+            --build-arg "VCS_REF=${GITHUB_SHA::8}" \
+            $(printf "%s" "${TAGS[@]/#/ --tag }" ) .
+      - 
+        name: Add custom code
+        if: env.exists == 'false'
+        run: |
+          cp crates/api_common/src/request.rs lemmy/crates/api_common/src/request.rs
+      - 
+        name: Build custom image
+        if: env.exists == 'false'
+        run: |
+        
+          TAGS=()
+          TAGS=("${{ secrets.DOCKERHUB_CUSTOM }}:latest")
+          TAGS+=("${{ secrets.DOCKERHUB_CUSTOM }}:${{ env.latest_tag }}")
+          
+          echo "Build date: ${{ steps.prepare.outputs.build_date }}"
+          echo "Docker platform: ${{ steps.prepare.outputs.docker_platforms }}"
+          echo "Tags: ${TAGS}"
+          
           docker buildx build --platform ${{ steps.prepare.outputs.docker_platforms }} \
             --output "type=image,push=true" \
             --progress=plain \
