--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,11 +103,8 @@ jobs:
       - 
         name: Add custom code
         if: env.exists == 'false'
-        run: |
-          cp crates/apub/src/objects/post.rs lemmy/crates/apub/src/objects/post.rs       
-          cp crates/api_common/src/request.rs lemmy/crates/api_common/src/request.rs
-          cp crates/api_crud/src/post/create.rs lemmy/crates/api_crud/src/post/create.rs
-          cp crates/api_crud/src/post/update.rs lemmy/crates/api_crud/src/post/update.rs
+        run: |  
+          #cp crates/api_common/src/request.rs lemmy/crates/api_common/src/request.rs
       - 
         name: Build custom image
         if: env.exists == 'false'
