--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         id: latest_tag
         with:
           query: |
-            query repository(owner: "lemmynet", name: "lemmy") {
+            query repository(owner:$owner,name:$repo) {
                 refs(refPrefix: "refs/tags/", last: 1, orderBy: {field: TAG_COMMIT_DATE, direction: ASC}) {
                   edges {
                     node {
@@ -26,6 +26,8 @@ jobs:
                     }
                  }
               }
+          owner: lemmynet
+          repo: lemmy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - 
