--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,14 +18,13 @@ jobs:
         id: latest_tag
         with:
           query: |
-            query repository(owner:$owner,name:$repo) {
+            query release($owner:String!,$repo:String!) {
+              repository(owner:$owner,name:$repo) {
                 refs(refPrefix: "refs/tags/", last: 1, orderBy: {field: TAG_COMMIT_DATE, direction: ASC}) {
                   edges {
                     node {
                       name
-                    }
-                 }
-              }
+             } } } } 
           owner: lemmynet
           repo: lemmy
         env:
