--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,15 @@ jobs:
         id: latest_tag
         with:
           query: |
-            query release($owner:String!,$repo:String!) {
-              repository(owner:$owner,name:$repo) {
+            query repository(owner:$owner,name:$repo) {
                 refs(refPrefix: "refs/tags/", last: 1, orderBy: {field: TAG_COMMIT_DATE, direction: ASC}) {
                   edges {
                     node {
                       name
-             } } } } 
-          owner: lemmynet
-          repo: lemmy
+             } } }
+          variables: |
+            owner: lemmynet
+            repo: lemmy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - 
