--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,12 @@ jobs:
         id: latest_tag
         with:
           query: |
-            query repository(owner:$owner,name:$repo) {
+            query repository(owner:lemmynet,name:lemmy) {
                 refs(refPrefix: "refs/tags/", last: 1, orderBy: {field: TAG_COMMIT_DATE, direction: ASC}) {
                   edges {
                     node {
                       name
              } } }
-          variables: |
-            owner: lemmynet
-            repo: lemmy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - 
