--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         id: latest_tag
         with:
           query: |
-            query tag() {
+            query tag(($owner: String!, $repo: String!) {
               repository(owner:lemmynet,name:lemmy) {
                 refs(refPrefix: "refs/tags/", last: 1, orderBy: {field: TAG_COMMIT_DATE, direction: ASC}) {
                   edges {
