--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,9 @@ jobs:
         name: Parse tag from query json
         run: |
           #!/bin/bash
-          latest_tag=$(echo "${{ steps.latest_tag.outputs.data }}" | jq '.repository.refs.edges[][].name')
+          json=$(echo "${{ steps.latest_tag.outputs.data }}" | tr "\n" " ")
+          echo "X${json}X" 
+          latest_tag=$(echo "$json" | jq '.repository.refs.edges[][].name')
           #latest_tag=$(echo "$latest_tag" | jq '.repository.refs.edges["node"][].name')
           echo "X${latest_tag}X" 
           #latest_tag=$(curl -s https://api.github.com/repos/lemmynet/lemmy/git/matching-refs/tags/0.1 -s | jq '.[-1].ref' -r | sed 's#.*/##')
