--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,16 +30,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - 
-        name: Parse tag from query json
+        name: Parse tag from query output
         run: |
           #!/bin/bash
-          json=$(echo '${{ steps.latest_tag.outputs.data }}' | tr "\n" " ")
-          echo "X${json}X" 
-          latest_tag=$(echo "$json" | jq '.repository.refs.edges[][].name')
-          #latest_tag=$(echo "$latest_tag" | jq '.repository.refs.edges["node"][].name')
-          echo "X${latest_tag}X" 
-          #latest_tag=$(curl -s https://api.github.com/repos/lemmynet/lemmy/git/matching-refs/tags/0.1 -s | jq '.[-1].ref' -r | sed 's#.*/##')
-          #latest_tag=$(curl -s https://api.github.com/repos/lemmynet/lemmy/releases/latest -s | jq .name -r | head -n1 | cut -d " " -f1  | tail -c+2)
+          latest_tag=$(echo '${{ steps.latest_tag.outputs.data }}' | jq '.repository.refs.edges[][].name')
+          echo "Found tag: ${latest_tag}" 
           echo "latest_tag=$latest_tag" >> $GITHUB_ENV
       - 
         name: Check if the new tag exists in DockerHub
