--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,8 +71,8 @@ jobs:
         if: env.exists == 'false'
         id: prepare
         run: |
-
-          PLATFORMS="linux/amd64,linux/arm64"
+          PLATFORMS="linux/arm64"
+          #PLATFORMS="linux/amd64,linux/arm64"
 
           IS_BETA=false
           [[ "${{ env.latest_tag }}" == *"rc"* ]] && IS_BETA=true
