--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,8 +42,6 @@ jobs:
           [ -z "$latest_tag" ] && echo "Tag not found!" && exit 1
           [[ "$latest_tag" = v* ]] && latest_tag="${latest_tag:1}"
           echo "Found tag: \"${latest_tag}\"" 
-          [[ "${latest_tag,,}" == *"alpha"* ]] && latest_tag=""
-          [ -z "${latest_tag}" ] && echo "exists=true" >> $GITHUB_ENV && exit 0
           echo "latest_tag=$latest_tag" >> $GITHUB_ENV
       - 
         name: Check if the tag exists locally
@@ -52,8 +50,12 @@ jobs:
         with: 
           tag: 'v${{ env.latest_tag }}'         
       -
-        name: Set variable
-        run: echo "exists=${{ steps.checkTag.outputs.exists }}" >> $GITHUB_ENV
+        name: Finish when found
+        run: |
+          #!/bin/bash
+          val="${{ steps.checkTag.outputs.exists }}"
+          [[ "${{ env.latest_tag }}" == *"alpha"* ]] && val="true"
+          echo "exists=${val}" >> $GITHUB_ENV
       - 
         name: Checkout
         if: env.exists == 'false'
