--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         id: latest_tag
         with:
           variables: |
-            repo: lemmy
+            repo: ${{ github.event.repository.name }}
             owner: lemmynet
           query: |
             query tag($owner: String!, $repo: String!) {
@@ -54,15 +54,37 @@ jobs:
         name: Finish when found
         run: |
           #!/bin/bash
+          beta="false"
+          
           val="${{ steps.checkTag.outputs.exists }}"
-          [[ "${{ env.latest_tag }}" == *"alpha"* ]] && val="true"
+
+          [[ "${{ env.latest_tag }}" == *"rc"* ]] && beta="true"
+          [[ "${{ env.latest_tag }}" == *"beta"* ]] && beta="true"
+          [[ "${{ env.latest_tag }}" == *"alpha"* ]] && beta="true" && val="true"
+
+          echo "beta=${beta}" >> $GITHUB_ENV
           echo "exists=${val}" >> $GITHUB_ENV
-      - 
+      -
         name: Checkout
         if: env.exists == 'false'
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      -
+        name: Docker metadata
+        id: meta
+        if: env.exists == 'false'
+        uses: docker/metadata-action@v5
+        with:
+          context: git
+          images: |
+            ${{ secrets.DOCKERHUB_REPO }}
+            ghcr.io/${{ github.repository }}
+          tags: |
+            type=raw,value=latest,priority=100
+            type=raw,value=${{ env.latest_tag }},enable=${{ env.beta == 'false' }}
+          labels: |
+            org.opencontainers.image.title=${{ vars.NAME }}
       - 
         name: Set up Docker Buildx
         if: env.exists == 'false'
@@ -87,79 +109,54 @@ jobs:
         if: env.exists == 'false'
         run: |
           git config --global url.https://github.com/.insteadOf git://github.com/
-          git clone --recurse-submodules -j8 https://github.com/lemmynet/lemmy.git --single-branch --branch ${{ env.latest_tag }}
-          cp Dockerfile lemmy/
-          cp .dockerignore lemmy/
+          git clone --recurse-submodules -j8 https://github.com/lemmynet/${{ github.event.repository.name }}.git --single-branch --branch ${{ env.latest_tag }}
+          cp Dockerfile ${{ github.event.repository.name }}/
+          cp .dockerignore ${{ github.event.repository.name }}/
       -
         name: Build Docker image
         if: env.exists == 'false'
-        id: build
+        uses: docker/build-push-action@v5
+        with:
+          context: ./${{ github.event.repository.name }}
+          push: true
+          provenance: false
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          annotations: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            VCS_REF=${GITHUB_SHA::8}
+            RUST_RELEASE_MODE=release
+            CARGO_BUILD_FEATURES=default
+            VERSION_ARG=${{ steps.meta.outputs.version }}
+      -
+        name: Copy custom code
+        if: env.exists == 'false'
         run: |
-          #!/bin/bash
-          
-          DIRECTORY="lemmy"
-          VERSION="${{ env.latest_tag }}"
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
-          PLATFORMS="linux/amd64,linux/arm64"
-          BUILD_DATE="$(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-          TITLE="$(grep --only-matching --perl-regex "(?<=image.title\=).*" $DIRECTORY/Dockerfile | sed -e 's/ /\xc2\xa0/g')"
-          DESC="$(grep --only-matching --perl-regex "(?<=image.description\=).*" $DIRECTORY/Dockerfile | sed -e 's/ /\xc2\xa0/g')"
-
-          IS_BETA=false
-          [[ "${VERSION}" == *"rc"* ]] && IS_BETA=true
-          [[ "${VERSION}" == *"beta"* ]] && IS_BETA=true
-          [[ "${VERSION}" == *"alpha"* ]] && IS_BETA=true
-          
-          TAGS=()
-          TAGS=("${{ secrets.DOCKERHUB_REPO }}:${VERSION}")
-          [[ ! $IS_BETA ]] && TAGS+=("${{ secrets.DOCKERHUB_REPO }}:latest")
-          TAGS+=("ghcr.io/${{ github.repository }}:${VERSION}")
-          [[ ! $IS_BETA ]] && TAGS+=("ghcr.io/${{ github.repository }}:latest")
-
-          LABELS=()
-          LABELS=("org.opencontainers.image.licenses=AGPL-3.0")
-          LABELS+=("org.opencontainers.image.title=${TITLE}")
-          LABELS+=("org.opencontainers.image.description=${DESC}")
-          LABELS+=("org.opencontainers.image.version=${VERSION}")
-          LABELS+=("org.opencontainers.image.created=${BUILD_DATE}")
-          LABELS+=("org.opencontainers.image.revision=${GITHUB_RUN_ID}")
-          LABELS+=("org.opencontainers.image.url=https://hub.docker.com/r/${{ secrets.DOCKERHUB_REPO }}")
-          LABELS+=("org.opencontainers.image.source=https://github.com/${{ github.repository }}")
-
-          cd "${DIRECTORY}"
-          docker buildx build --progress=plain \
-            --platform "${PLATFORMS}" \
-            --output "type=image,push=true" \
-            --build-arg "VERSION_ARG=${VERSION}" \
-            --build-arg "VCS_REF=${GITHUB_SHA::8}" \
-            --build-arg "RUST_RELEASE_MODE=release" \
-            --build-arg "CARGO_BUILD_FEATURES=default" \
-            $(printf '%s' "${LABELS[@]/#/ --label }" ) \
-            $(printf '%s' "${LABELS[@]/#/ --annotation }" ) \
-            $(printf '%s' "${TAGS[@]/#/ --tag }" ) .
-
-          TAGS=()
-          TAGS=("${{ secrets.DOCKERHUB_CUSTOM }}:latest")
-          TAGS+=("${{ secrets.DOCKERHUB_CUSTOM }}:${{ env.latest_tag }}")
-
-          cp crates/apub/src/objects/post.rs lemmy/crates/apub/src/objects/post.rs
-          cp crates/api_common/src/request.rs lemmy/crates/api_common/src/request.rs
-          cp crates/api_crud/src/post/create.rs lemmy/crates/api_crud/src/post/create.rs
-          cp crates/api_crud/src/post/update.rs lemmy/crates/api_crud/src/post/update.rs
-          cp crates/db_schema/src/impls/post.rs lemmy/crates/db_schema/src/impls/post.rs
-          
-          docker buildx build --progress=plain \
-            --platform "${PLATFORMS}" \
-            --output "type=image,push=true" \
-            --build-arg "VERSION_ARG=${VERSION}" \
-            --build-arg "VCS_REF=${GITHUB_SHA::8}" \
-            --build-arg "RUST_RELEASE_MODE=release" \
-            --build-arg "CARGO_BUILD_FEATURES=default" \
-            $(printf '%s' "${LABELS[@]/#/ --label }" ) \
-            $(printf '%s' "${LABELS[@]/#/ --annotation }" ) \
-            $(printf '%s' "${TAGS[@]/#/ --tag }" ) .
-            
-          rm -f ${HOME}/.docker/config.json
+          cp crates/apub/src/objects/post.rs ${{ github.event.repository.name }}/crates/apub/src/objects/post.rs
+          cp crates/api_common/src/request.rs ${{ github.event.repository.name }}/crates/api_common/src/request.rs
+          cp crates/api_crud/src/post/create.rs ${{ github.event.repository.name }}/crates/api_crud/src/post/create.rs
+          cp crates/api_crud/src/post/update.rs ${{ github.event.repository.name }}/crates/api_crud/src/post/update.rs
+          cp crates/db_schema/src/impls/post.rs ${{ github.event.repository.name }}/crates/db_schema/src/impls/post.rs
+      -
+        name: Build custom image
+        if: env.exists == 'false'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./${{ github.event.repository.name }}
+          push: true
+          provenance: false
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ${{ secrets.DOCKERHUB_CUSTOM }}:latest
+            ${{ secrets.DOCKERHUB_CUSTOM }}:${{ steps.meta.outputs.version }}
+          labels: ${{ steps.meta.outputs.labels }}
+          annotations: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            VCS_REF=${GITHUB_SHA::8}
+            RUST_RELEASE_MODE=release
+            CARGO_BUILD_FEATURES=default          
+            VERSION_ARG=${{ steps.meta.outputs.version }}
       -
         name: Create a release
         if: env.exists == 'false'
@@ -167,8 +164,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
         with:
-          tag: "v${{ steps.build.outputs.version }}"
-          title: "v${{ steps.build.outputs.version }}"
+          tag: "v${{ steps.meta.outputs.version }}"
+          title: "v${{ steps.meta.outputs.version }}"
       -
        name: Send mail
        if: env.exists == 'false'
@@ -177,8 +174,8 @@ jobs:
          to: ${{secrets.MAILTO}}
          from: Github Actions <${{secrets.MAILTO}}>
          connection_url: ${{secrets.MAIL_CONNECTION}}
-         subject: Build of ${{ github.event.repository.name }} v${{ steps.build.outputs.version }} completed
+         subject: Build of ${{ github.event.repository.name }} v${{ steps.meta.outputs.version }} completed
          body: |
-              The build job of ${{ github.event.repository.name }} v${{ steps.build.outputs.version }} was completed successfully! 
+              The build job of ${{ github.event.repository.name }} v${{ steps.meta.outputs.version }} was completed successfully! 
               
               See https://github.com/${{ github.repository }}/actions for more information.
