--- a/renovate.json
+++ b/renovate.json
@@ -2,4 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended", ":disableDependencyDashboard"],
   "forkProcessing": "enabled"
+  "cargo": {
+    "enabled": false
+  }
 }
