--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,11 +136,11 @@ jobs:
         name: Copy custom code
         if: env.exists == 'false'
         run: |
+          cp crates/db_schema/src/utils.rs ${{ github.event.repository.name }}/crates/db_schema/src/utils.rs
           cp crates/apub/src/objects/post.rs ${{ github.event.repository.name }}/crates/apub/src/objects/post.rs
           cp crates/api_common/src/request.rs ${{ github.event.repository.name }}/crates/api_common/src/request.rs
           cp crates/api_crud/src/post/create.rs ${{ github.event.repository.name }}/crates/api_crud/src/post/create.rs
           cp crates/api_crud/src/post/update.rs ${{ github.event.repository.name }}/crates/api_crud/src/post/update.rs
-          #cp crates/db_schema/src/impls/post.rs ${{ github.event.repository.name }}/crates/db_schema/src/impls/post.rs
       -
         name: Build custom image
         if: env.exists == 'false'
