--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,7 +117,7 @@ jobs:
           cp .dockerignore ${{ github.event.repository.name }}/
       -
         name: Build Docker image
-        if: env.exists == 'falseX'
+        if: env.exists == 'false'
         uses: docker/build-push-action@v5
         with:
           context: ./${{ github.event.repository.name }}
@@ -136,7 +136,6 @@ jobs:
         name: Copy custom code
         if: env.exists == 'false'
         run: |
-          cp crates/api_crud/src/site/read.rs lemmy/crates/api_crud/src/site/read.rs
           cp crates/db_schema/src/utils.rs ${{ github.event.repository.name }}/crates/db_schema/src/utils.rs
           cp crates/apub/src/objects/post.rs ${{ github.event.repository.name }}/crates/apub/src/objects/post.rs
           cp crates/api_common/src/request.rs ${{ github.event.repository.name }}/crates/api_common/src/request.rs
