--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,7 +117,7 @@ jobs:
           cp .dockerignore ${{ github.event.repository.name }}/
       -
         name: Build Docker image
-        if: env.exists == 'false'
+        if: env.exists == 'falseX'
         uses: docker/build-push-action@v5
         with:
           context: ./${{ github.event.repository.name }}
