--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,9 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended", ":disableDependencyDashboard"],
   "forkProcessing": "enabled",
+  "docker": {
+    "enabled": false
+  },  
   "cargo": {
     "enabled": false
   },
