--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended", ":disableDependencyDashboard"],
   "forkProcessing": "enabled",
-  "docker-compose": {
+  "woodpecker": {
     "enabled": false
   },  
   "cargo": {
