--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -128,7 +128,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           annotations: ${{ steps.meta.outputs.annotations }}
           build-args: |
-            VCS_REF=${GITHUB_SHA::8}
             RUST_RELEASE_MODE=release
             CARGO_BUILD_FEATURES=default
             VERSION_ARG=${{ steps.meta.outputs.version }}
@@ -156,7 +155,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           annotations: ${{ steps.meta.outputs.labels }}
           build-args: |
-            VCS_REF=${GITHUB_SHA::8}
             RUST_RELEASE_MODE=release
             CARGO_BUILD_FEATURES=default          
             VERSION_ARG=${{ steps.meta.outputs.version }}
@@ -164,11 +162,10 @@ jobs:
         name: Create a release
         if: env.exists == 'false'
         uses: action-pack/github-release@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
         with:
           tag: "v${{ steps.meta.outputs.version }}"
           title: "v${{ steps.meta.outputs.version }}"
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
       -
        name: Send mail
        if: env.exists == 'false'
