--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,5 @@ updates:
     schedule:
       interval: weekly    
     open-pull-requests-limit: 0
+    allow:
+      - dependency-name: "disabled"    
